# QR-Image-embedded

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  QR_Encode.c  QR_Encode.h  README  README.md  main.c
